ESM-408 - Text fix
- Fixing content

--- a/modules/guidance/client/views/guidance-main.html
+++ b/modules/guidance/client/views/guidance-main.html
@@ -53,7 +53,7 @@
             </ul>
             <h3>Fees Information</h3>
             <ul>
-                <li><a class="content-link" href="http://www.eao.gov.bc.ca/fees.html" target="_blank">Compliance and Enforcement Guidance Documents</a></li>
+                <li><a class="content-link" href="http://www.eao.gov.bc.ca/fees.html" target="_blank">Fees Overview</a></li>
             </ul>
             <h3>Public Participation Information</h3>
             <ul>
