--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -42,20 +42,25 @@
 										data-target="#addCommentSessionModal">Add Comment Period</button>
 							</div>
 							<div class="pull-right">
-								<button class="btn btn-default btn-sm"
-									ng-click="selectPhaseForEdit(phase)"
-									data-toggle="modal"
-									data-target="#editPhaseDetail">Edit Phase Detail</button>
+                <button class="btn btn-default btn-sm"
+                  ng-click="selectPhase(phase)"
+                  ng-if="phase.code !== 'intake'"
+                  data-toggle="modal"
+                  data-target="#deletePhaseModal">Delete Phase</button>
+                <button class="btn btn-default btn-sm"
+                  ng-click="selectPhase(phase)"
+                  data-toggle="modal"
+                  data-target="#editPhaseDetail">Edit Phase Detail</button>
 								<button class="btn btn-primary btn-sm"
-										ng-click="completeCurrentPhase(project)"
-										ng-if="canCompletePhase(phase)"
-										data-toggle="modal"
-										data-target="#completePhaseModal">Complete Phase</button>
+                  ng-click="completeCurrentPhase(project)"
+                  ng-if="canCompletePhase(phase)"
+                  data-toggle="modal"
+                  data-target="#completePhaseModal">Complete Phase</button>
 								<button class="btn btn-primary btn-sm"
-										ng-click="startNextPhase(project)"
-										ng-if="isNextPhase(phase._id)"
-										data-toggle="modal"
-										data-target="#completePhaseModal">Start Phase</button>
+                  ng-click="startNextPhase(project)"
+                  ng-if="isNextPhase(phase._id)"
+                  data-toggle="modal"
+                  data-target="#completePhaseModal">Start Phase</button>
 							</div>
 						</div>
 						<div class="phase-schedule">
@@ -117,7 +122,29 @@
 
 </div>
 
-<!-- ADD MILESTONE MODAL -->
+<!-- DELETE PHASE MODAL -->
+<div class="modal fade" id="deletePhaseModal" role="dialog" tabindex="-1">
+  <div class="modal-dialog add-phase-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h3 class="modal-title">Confirm Deletion of Phase: {{selectedPhase.name}}</h3>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this phase?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button ng-click="deletePhase(selectedPhase)" type="button" class="btn btn-primary" data-dismiss="modal">Delete</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<!-- DELETE PHASE MODAL -->
+
+<!-- EDIT MILESTONE MODAL -->
 <div class="modal fade" id="editPhaseDetail" role="dialog" tabindex="-1">
 	<div class="modal-dialog add-phase-dialog">
 		<div class="modal-content">
