--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -8,7 +8,7 @@
 			<span>{{project.name}}</span>
 			<span ng-if="!project.name">Untitled Project</span>
 		</a>
-		
+
 		<ul class="nav nav-pills nav-stacked">
 			<li><a ui-sref="p.detail" href title="Project Details">Project Details</a></li>
      		<li><a ui-sref="p.documents" href title="Documents">Documents</a></li>
@@ -49,7 +49,7 @@
 
 	<!-- PROJECT MENU - AUTHENTICATED -->
 	<div ng-if="(menu.context === 'project' || menu.context === 'activity') && menu.authentication.user">
-		
+
 		<a class="project-home-link" ui-sref="p.detail({projectid: menu.project.code})" title="Project Details">
 			<span class="glyphicon glyphicon-map-marker"></span>
 			<span>{{project.name}}</span>
@@ -73,7 +73,7 @@
 		</ul>
 
 		<!-- ROLES & PERMISSIONS -->
-		<div class="sidenav-group">
+		<div class="sidenav-group" ng-show="menu.authentication.user && (menu.project.userCan.manageRoles || menu.project.userCan.managePermissions)">
 			<hr />
 			<h4>Project Settings</h4>
 			<ul class="nav nav-pills nav-stacked" ng-show="menu.authentication.user">
