UI fixes for project entry

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -4596,6 +4596,10 @@ section.project-info {
 		height: calc(400px - 2px);
 		width: 100%;
 	}
+
+	.map-container {
+		margin-bottom: 1.5rem;
+	}
 }
 
 @media (min-height: 900px) {
