--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -1,7 +1,7 @@
 <form class="view-form" name="projectForm" ng-submit="saveProject(projectForm.$valid)" novalidate>
 
-	<div class="floating-alert alert alert-danger alert-dismissible fade in hidden">
-		<span class="pull-left">Floating Alert Container!</span>
+	<div class="floating-alert alert alert-success" ng-if="projectForm.$submitted">
+		<span class="pull-left">Project saved successfully.</span>
 		<button type="button" class="btn btn-default close" data-dismiss="alert">
         	<span aria-hidden="true">&times;</span>
     	</button>
@@ -44,9 +44,8 @@
 				<legend>General Info</legend>
 				<div class="form-group" x-show-errors>
 					<label class="control-label" for="projectname">Project Name</label>
-					<input class="form-control" title="Project Name" id="name" name="name"
-						ng-model="project.name"
-						ng-change="onChangeProjectName()" required></input>
+					<input class="form-control" title="Project Name" id="name" name="projectname"
+						ng-model="project.name" required></input>
 				</div>
 				<div class="row">
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
