--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -3,7 +3,7 @@
 	<div class="view-title-container flex-row">
 		<h1>{{ project.name }}</h1>
 		<div class="actions">
-			<div class="btn-group" ng-if="environment === 'EAO' && authentication.user">
+			<div class="actions-group" ng-if="environment === 'EAO' && authentication.user">
 				<a class="btn btn-default btn-sm" ui-sref="p.edit({pId:o._id})">Edit Project</a>
 				<a class="btn btn-success btn-sm" ng-click="publishProject()" ng-if="!project.isPublished">Publish Project</a>
 			</div>
