--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -28,7 +28,7 @@
 		<!-- END: MEM DESCRIPTION PANEL -->
 
 		<div class="row">
-			<div class="col-xs-12 col-md-3" ng-init="form.expandnews = false">
+			<div class="col-xs-12 col-md-4 col-lg-3" ng-init="form.expandnews = false">
 				<div class="panel panel-default news-feed">
 					<div class="panel-heading"><h2>News & Announcements</h2></div>
 					<div class="panel-body">
@@ -39,16 +39,14 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-9">
+			<div class="col-xs-12 col-md-8 col-lg-9">
 				<tmpl-projects-map id="anchor-map" x-projects='projects'></tmpl-projects-map>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-sm-12">
-				<tmpl-projects-list2
-					id="anchor-list"
-					x-projects="projects">
+				<tmpl-projects-list2 id="anchor-list" x-projects="projects">
 				</tmpl-projects-list2>
 			</div>
 		</div>
