--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1514,6 +1514,7 @@ tmpl-footer {
 	left: 0;
 	display: -webkit-flex;
 	display: flex;
+	z-index: 999;
 
 	.left-panel,
 	.main-panel {
@@ -2086,7 +2087,6 @@ $header-height-sm: 5.2rem;
 	color: #FFF;
 	background: $corp-blue;
 	border-top: 2px solid $corp-gold;
-	z-index: 999;
 	
 	a {
 		color: #FFF;
@@ -2182,6 +2182,7 @@ $sidenav-text-shadow: 0 0 2px #FFF;
 			padding: 1rem 1.5rem;
 			font-size: 1.4rem;
 			font-weight: bold;
+			color: $app-base-color;
 			
 			h2 {
 				margin-top: 1px;
@@ -3142,11 +3143,13 @@ $table-head-bg: #F7F8FA;
 $table-filter-bg: #FFF;
 $table-footer-bg: #F7F8FA;
 
+
 .table {
 	margin: 0;
 	table-layout: fixed;
 	background: $table-bg;
 
+	thead,
 	.ng-table-sort-header {
 		th {
 			padding-top: 1rem;
@@ -3168,6 +3171,10 @@ $table-footer-bg: #F7F8FA;
 		.input-sm {
 			font-size: 1.4rem;
 		}
+	}
+
+	> thead > tr > th {
+		border-bottom: none;
 	}
 	
 	> thead > tr > th:first-child,
@@ -4482,7 +4489,13 @@ section.project-info {
 ------------------------------ */
 .project-schedule-view {
 	.panel-body {
-		padding-bottom: 0;
+		padding: 0;
+
+		.button-bar {
+			padding: 1.5rem;
+			border-bottom: 1px solid #DDD;
+			background: #f7f8fa;
+		}
 	}
 	
 	.table {
@@ -4518,28 +4531,17 @@ section.project-info {
 		.label, .btn {
 			display: block;
 			width: 100%;
-			height: 2rem;
-			text-transform: uppercase;
+			height: 2.1rem;
+			font-weight: normal;
 		}
 	}
 
 	.status-col {
 		width: 11rem;
 	}
-
-	td.actions-col {
-		padding-left: 0;
-		text-align: center;
-
-		.btn {
-			margin-top: 0.45rem;
-		}
-	}
 }
 
 .phase-schedule {
-	margin-left: -1.5rem;
-	margin-right: -1.5rem;
 	margin-bottom: 0;
 }
 
@@ -4833,6 +4835,27 @@ tmpl-template-render {
 }
 
 
+/* TEMP FIXES/OVERRIDES, PROTOTYPES 
+----------------------------- */
+.temp-overlay {
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	z-index: 1000;
+	background: rgba(0,0,0,0.5);
+}
+
+.modal.fade {
+	~ .temp-overlay {
+		display: none;
+	}
+
+	&.in ~ .temp-overlay {
+		position: fixed;
+		display: block;
+	}
+}
 
 .prototype-block {
 	display: flex;
