--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -133,14 +133,14 @@
         <button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h3 class="modal-title">Confirm Deletion of Phase: {{selectedPhase.name}}</h3>
+        <h3 class="modal-title">Delete Phase &nbsp;&rsaquo;&nbsp; {{selectedPhase.name}}</h3>
       </div>
       <div class="modal-body">
         Are you sure you want to delete this phase?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button ng-click="deletePhase(selectedPhase)" type="button" class="btn btn-primary" data-dismiss="modal">Delete</button>
+        <button ng-click="deletePhase(selectedPhase)" type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -155,7 +155,7 @@
 				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
-				<h3 class="modal-title">Edit Phase Detail: {{selectedPhase.name}}</h3>
+				<h3 class="modal-title">Edit Phase &nbsp;&rsaquo;&nbsp; {{selectedPhase.name}}</h3>
 			</div>
 			<div class="modal-body">
 				<div class="form-group has-error" ng-class="{'has-error': validateForm}">
