ESM-409 - Scrolling issues
- Fixed project documents and invitations views

--- a/modules/invitations/client/views/invitation.html
+++ b/modules/invitations/client/views/invitation.html
@@ -1,3 +1,3 @@
 
-<tmpl-invitations project="project"></tmpl-invitations>
+<tmpl-invitations project="project" class="view-fix"></tmpl-invitations>
 
