--- a/modules/organizations/client/views/organization-user-edit.html
+++ b/modules/organizations/client/views/organization-user-edit.html
@@ -1,20 +1,14 @@
-<div class="edit-user-view">
+
+<form class="view-form" name="userForm" ng-submit="save(userForm.$valid)" novalidate>	
 	
-	<div class="view-title-container">
+	<div class="view-title-container flex-row">
 		<h1>Add/Edit User</h1>
-	</div>
-	
-	<div class="view-body-container">
-
-	<form name="userForm" ng-submit="save(userForm.$valid)" novalidate>
-
-		<div class="row hidden">
-			<div class="col-sm-12 text-right">
-				<button class="btn btn-xs btn-link" ui-sref="admin.organization.detail({orgId: org._id})">Cancel</button>
-				<button class="btn btn-xs btn-link" href type="submit">Save</button>
-			</div>
+		<div class="actions">
+			<button class="btn btn-default btn-sm" ui-sref="admin.organization.detail({orgId: org._id})">Cancel</button>
+			<button class="btn btn-primary btn-sm" type="submit">Save</button>
 		</div>
-		
+	</div>
+	<div class="view-body-container">
 		<section>
 			<div class="row">
 				<div class="col-sm-3">
@@ -190,18 +184,7 @@
 				</div>
 			</div>
 		</section>
-		
-		<div class="form-footer no-border clearfix">
-			<div class="pull-right">
-				<button class="btn btn-default" ui-sref="admin.organization.detail({orgId: org._id})">Cancel</button>
-				<button class="btn btn-primary" type="submit">Save</button>
-			</div>
-		</div>
-
-	</form>
-	
 	</div><!-- / VIEW BODY CONTAINER -->
-
-</div>
+</form>
 
 
