--- a/modules/users/client/views/admin/user-edit.html
+++ b/modules/users/client/views/admin/user-edit.html
@@ -1,31 +1,27 @@
 
-<div class="view-title-container">
-	<h1>Add/Edit User<span ng-show="user.username"> &nbsp;&rsaquo;&nbsp; {{user.username}}<span></h1>
-</div>
-
-<div class="view-body-container">
-	<form name="userForm" ng-submit="save(userForm.$valid)" novalidate>
-
-		<div class="row hidden">
-			<div class="col-sm-12 text-right">
-				<button class="btn btn-xs btn-link" ui-sref="admin.user.list">Cancel</button>
-				<button class="btn btn-xs btn-link" href type="submit">Save</button>
-			</div>
+<form class="view-form" name="userForm" ng-submit="save(userForm.$valid)" novalidate>
+	
+	<div class="view-title-container flex-row">
+		<h1>Add/Edit User<span ng-show="user.username"> &nbsp;&rsaquo;&nbsp; {{user.username}}<span></h1>
+		<div class="actions">
+			<button class="btn btn-default btn-sm" ui-sref="admin.user.list">Cancel</button>
+			<button class="btn btn-primary btn-sm" type="submit">Save</button>
 		</div>
-
+	</div>
+	<div class="view-body-container">
 		<!-- USER PROFILE -->
 		<fieldset>
 			<legend>User Profile</legend>
 			<div class="row">
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group">
-						<label for="salutation" class="control-label">Salutation<em>Optional</em></label>
+						<label for="salutation" class="control-label">Salutation<em>(Optional)</em></label>
 						<select class="form-control" ng-model="user.salutation" ng-options="sal as sal for sal in salutations"></select>
 					</div>
 				</div>    
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group" x-show-errors>
-						<label for="firstName" class="control-label">First Name<em>Required</em></label>
+						<label for="firstName" class="control-label">First Name</label>
 						<input class="form-control" id="firstName" name="firstName" ng-change="calculateName()" type="text" ng-model="user.firstName" required>
 						<div ng-messages="userForm.firstName.$error" role="alert">
 							<p class="help-block error-text" ng-message="required">First name is required.</p>
@@ -34,14 +30,14 @@
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group">
-						<label class="control-label" for="middleName">Middle Name<em>Optional</em></label>
+						<label class="control-label" for="middleName">Middle Name<em>(Optional)</em></label>
 						<input class="form-control" id="middleName" ng-change="calculateName()" type="text" ng-model="user.middleName">
 
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group" x-show-errors>
-						<label for="lastName" class="control-label">Last Name <em>Required</em></label>
+						<label for="lastName" class="control-label">Last Name</label>
 						<input class="form-control" id="lastName" name="lastName" ng-change="calculateName()" type="text" ng-model="user.lastName" required>
 						<div ng-messages="userForm.lastName.$error" role="alert">
 							<p class="help-block error-text" ng-message="required">Last name is required.</p>
@@ -52,7 +48,7 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group" x-show-errors>
-						<label for="username" class="control-label">Username<em>Required</em></label>
+						<label for="username" class="control-label">Username</label>
 						<input class="form-control" id="username" name="username" type="text" ng-model="user.username" required>
 						<div ng-messages="userForm.username.$error" role="alert">
 							<p class="help-block error-text" ng-message="required">User name is required.</p>
@@ -77,7 +73,7 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group" x-show-errors>
-						<label class="control-label" for="email">Email<em>Required</em></label>
+						<label class="control-label" for="email">Email</label>
 						<input class="form-control" placeholder="myname@example.com" id="email" name="email" type="text" ng-model="user.email" required>
 						<div ng-messages="userForm.email.$error" role="alert">
 							<p class="help-block error-text" ng-message="required">Email is required.</p>
@@ -151,7 +147,7 @@
 			<div class="row">
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group">
-						<label for="orgName" class="control-label">Organization<em>Required</em></label>
+						<label for="orgName" class="control-label">Organization</label>
 						<select class="form-control"
 								ng-model="user.org"
 								ng-sort="name"
@@ -160,13 +156,13 @@
 				</div>    
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group">
-						<label for="department" class="control-label">Department<em>Optional</em></label>
+						<label for="department" class="control-label">Department<em>(Optional)</em></label>
 						<input class="form-control" id="department" type="text" ng-model="user.department">
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group">
-						<label for="title" class="control-label">Title<em>Optional</em></label>
+						<label for="title" class="control-label">Title<em>(Optional)</em></label>
 						<input class="form-control" id="title" type="text" ng-model="user.title">
 					</div>
 				</div>
@@ -179,19 +175,11 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="form-group">
-						<label for="notes" class="control-label">Notes<em>Optional</em></label>
+						<label for="notes" class="control-label">Notes<em>(Optional)</em></label>
 						<textarea class="form-control" id="notes" rows="2" ng-model="user.notes"></textarea>
 					</div>
 				</div>
 			</div>
 		</fieldset>
-
-		<div class="form-footer clearfix">
-			<div class="pull-right">
-				<button class="btn btn-default" ui-sref="admin.user.list">Cancel</button>
-				<button class="btn btn-primary" type="submit">Save</button>
-			</div>
-		</div>
-
-	</form>
-</div>
+	</div>
+</form>
